cmake_minimum_required(VERSION 2.8)
project(MultiAgentSearch)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -Wall -Wextra")
include_directories(.)
set(SOURCE_FILES
        agent.cpp
        agent_set.cpp
        astar.cpp
        config.cpp
        conflict_avoidance_table.cpp
        conflict_based_search.cpp
        conflict_set.cpp
        constraints_set.cpp
        dijkstra.cpp
        focalsearch.cpp
        isearch.cpp
        main.cpp
        map.cpp
        mdd.cpp
        mission.cpp
        prioritized_planning.cpp
        push_and_rotate.cpp
        scipp.cpp
        search_queue.cpp
        sipp.cpp
        tinyxml2.cpp
        xmllogger.cpp
        zero_scipp.cpp
        agent.h
        agent_move.h
        agent_set.h
        astar.h
        cbs_node.h
        config.h
        conflict_avoidance_table.h
        conflict_based_search.h
        conflict_set.h
        constraint.h
        constraints_set.h
        dijkstra.h
        focalsearch.h
        fs_node.h
        gl_const.h
        ilogger.h
        isearch.h
        map.h
        mdd.h
        mission.h
        multiagent_search_interface.h
        multiagent_search_result.h
        node.h
        prioritized_planning.h
        push_and_rotate.h
        scipp.h
        scipp_node.h
        search_queue.h
        searchresult.h
        sipp.h
        sipp_node.h
        testing_results.h
        tinyxml2.h
        xmllogger.h
        zero_scipp.h
        zero_scipp_node.h
        )
add_executable(MultiAgentSearch ${SOURCE_FILES})
